# ticked-async-executor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: simple_with_tracy.rs  timer_registration_with_tracy.rs
src/: droppable_future.rs  lib.rs  split_ticked_async_executor.rs  task_identifier.rs  ticked_async_executor.rs  ticked_timer.rs  ticked_timer_from_tick_event.rs  ticked_timer_from_timer_registration.rs
tests/: futures_tests.rs  tokio_tests.rs
