[package]
name = "ticked_async_executor"
version = "0.4.0"
authors = ["coder137"]
edition = "2024"
description = "Local executor that runs woken async tasks when it is ticked"
license = "Apache-2.0"
repository = "https://github.com/coder137/ticked-async-executor"
categories = ["asynchronous", "concurrency", "game-development", "simulation"]
readme = "README.md"

[features]
# Provides a tick event in the form of a `tokio::sync::watch::Receiver<f64>` as per the `delta` provided 
# to the `TickedAsyncExecutorTicker::tick` API
# Also provides a timer implementation: `TickedTimerFromTickEvent`
tick_event = []

# Timers can be registered with the `TickedAsyncExecutorTicker` via the `TickedAsyncExecutorSpawner`
# The timers count down with every call to `TickedAsyncExecutorTicker::tick` API as per the delta provided
# Once the timer has elapsed, the corresponding `tokio::sync::oneshot::*` channel is notified
# Also provides a timer implementation: `TickedTimerFromTimerRegistration`
timer_registration = []

[dependencies]
async-task = "4.7"
pin-project = "1"
flume = { version = "0.12" }

tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.11.4", features = ["fibers", "flush-on-exit"] }

ctrlc = "3.5.2"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "simple_with_tracy"

[[example]]
name = "timer_registration_with_tracy"
required-features = ["timer_registration"]
